very basic user and comment system added
