# backend/src/main/kotlin/de/instatonne/backend/models/Post.kt
@@ -2,26 +2,36 @@ package de.instatonne.backend.models
 
 import de.instatonne.backend.core.DatabaseWrapper
 import de.instatonne.backend.generated.models.PostApiModel
+import org.hibernate.annotations.GenericGenerator
 import java.time.OffsetDateTime
 import javax.persistence.*
 
 @Entity
 data class Post(
         @Id
-        @GeneratedValue(strategy = GenerationType.IDENTITY)
-        val id: Int,
-
-        @Column(nullable = false)
-        val name: String,
+        @GeneratedValue(generator = "uuid")
+        @GenericGenerator(name = "uuid", strategy = "uuid2")
+        val id: String,
 
         @Column(nullable = false)
         val imageUrl: String,
 
         @Column(nullable = false)
-        val created: OffsetDateTime
+        val created: OffsetDateTime = OffsetDateTime.now()
 ) : DatabaseWrapper<PostApiModel> {
 
+    @ManyToOne
+    lateinit var author: User
+
+    @OneToMany(cascade = [CascadeType.ALL])
+    val comments: MutableList<Comment> = mutableListOf()
+
+
     override fun generateAPIVersion(): PostApiModel {
-        return PostApiModel().created(created).imageUrl(imageUrl)
+        return PostApiModel()
+                .created(created)
+                .imageUrl(imageUrl)
+                .id(id)
+                .comments(comments.map(Comment::generateAPIVersion))
     }
 }
